test/bad/functions/name02.px

func f(x: String) def
    skip

f, f = f, f
